# Eigenvector_Pereferential_Attachement

./: Makefile  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
documentation/: EPAM_figures.pages  myst.yml
documentation/_build/site/: config.json  myst.search.json  myst.xref.json  objects.inv
documentation/_build/site/content/: index.json
documentation/src/: Introduction.md
notebooks/: draft.ipynb
notebooks/.ipynb_checkpoints/: draft-checkpoint.ipynb
src/: Introduction.md
src/epam/: simulator.py
src/utils/graph/: AdjMatrix.py  DynamicCSR.py
src/utils/solver/: power.py  solver.py
src/visualization/: plot_graph_signal.py
test/: test_simulator.py
