[project]
name = "epam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg>=1.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "plotext>=5.3.2",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "epam",
]

[tool.uv.sources]
epam = { workspace = true }
